fixed can't upload iamge on safari

--- a/public/main.less
+++ b/public/main.less
@@ -240,3 +240,11 @@ body {
     }
   }
 }
+
+.display-image-container {
+  width: 0px;
+  height: 0px;
+  #display-image {
+    display: none;
+  }
+}
